# google-agent-search

agents/brand-search-optimization/: README.md
agents/code-reviewer/: .gitignore
agents/code-reviewer/code_reviewer/: agent.py  prompt.py
agents/code-reviewer/code_reviewer/shared_libraries/: constants.py
agents/code-reviewer/code_reviewer/tools/: auth.py  commit.py  github_ops.py
agents/customer-service/: README.md
agents/data-science/: README.md
agents/data-science/data_science/: agent.py  prompts.py
agents/fomc-research/: README.md
agents/health-ai-agent/: README.md
agents/health-ai-agent/health_ai_agent/: .env  agent.py  prompts.py
agents/personalized-shopping/: README.md
agents/travel-concierge/: README.md
agents/travel-concierge/sub-agent-mcp-demo/: agent.py  prompt.py
agents/travel-concierge/sub-agent-mcp-demo/sub_agent/: planning_agent.py  prompt.py  weather_agent.py
agents/travel-concierge/travel_concierge/: prompt.py
agents/travel-concierge/travel_concierge/shared_libraries/: types.py
agents/web_search_summarizer/: .env  README.md  agent.py  prompt.py
starter-template/: .env  .env example  README.md  pyproject.toml
starter-template/deployment/: deploy.py
starter-template/eval/data/: test.json  test_config.json
starter-template/starter_template/: agent.py  prompt.py
starter-template/starter_template/sub_agents/sub_agent1_name/: agent.py  prompt.py
starter-template/starter_template/sub_agents/sub_agent1_name/tools/: example_tool2.py
starter-template/starter_template/tools/: example_tool.py
(+6 files in other folders)
